update documentation to add `command` configuration option

--- a/MANUAL.html
+++ b/MANUAL.html
@@ -13,8 +13,8 @@
 </head>
 <body>
 <header>
-<h1 class="title">Pukcab 1.3.84</h1>
-<h3 class="date">2015-04-04</h3>
+<h1 class="title">Pukcab 1.3.97</h1>
+<h3 class="date">2015-04-12</h3>
 </header>
 <nav id="TOC">
 <ul>
@@ -274,12 +274,18 @@ catalog=&quot;/var/local/backup/catalog.db&quot;</code></pre>
 <td style="text-align: left;">TCP port to use on the backup server</td>
 </tr>
 <tr class="even">
+<td style="text-align: left;">`command</td>
+<td style="text-align: center;">text</td>
+<td style="text-align: center;"><code>&quot;pukcab&quot;</code></td>
+<td style="text-align: left;">command to use on the backup server</td>
+</tr>
+<tr class="odd">
 <td style="text-align: left;"><code>include</code></td>
 <td style="text-align: center;">list</td>
 <td style="text-align: center;"><a href="#os-dependent-defaults">OS-dependent</a></td>
 <td style="text-align: left;">what to include in the backup</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: left;"><code>exclude</code></td>
 <td style="text-align: center;">list</td>
 <td style="text-align: center;"><a href="#os-dependent-defaults">OS-dependent</a></td>
