fix type in documentation

--- a/MANUAL.html
+++ b/MANUAL.html
@@ -13,8 +13,8 @@
 </head>
 <body>
 <header>
-<h1 class="title">Pukcab 1.3.97</h1>
-<h3 class="date">2015-04-12</h3>
+<h1 class="title">Pukcab 1.3.99</h1>
+<h3 class="date">2015-04-13</h3>
 </header>
 <nav id="TOC">
 <ul>
@@ -274,7 +274,7 @@ catalog=&quot;/var/local/backup/catalog.db&quot;</code></pre>
 <td style="text-align: left;">TCP port to use on the backup server</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">`command</td>
+<td style="text-align: left;"><code>command</code></td>
 <td style="text-align: center;">text</td>
 <td style="text-align: center;"><code>&quot;pukcab&quot;</code></td>
 <td style="text-align: left;">command to use on the backup server</td>
