--- a/MANUAL.html
+++ b/MANUAL.html
@@ -962,7 +962,8 @@ Missing:  0
 <ul>
 <li>replace <code>catalog.db</code> by your catalog’s path</li>
 <li>you may need to install <a href="http://www.sqlite.org/">SQLite</a></li>
-<li>these commands must be run as the <code>pukcab</code> user <em>on the server</em></li>
+<li>this command must be run as the <code>pukcab</code> user <em>on the server</em></li>
+<li>this command will (probably) take very long and block any backup until it has completed</li>
 </ul>
 <section class="footnotes">
 <hr />
