add a warning about BusyBox

--- a/MANUAL.html
+++ b/MANUAL.html
@@ -14,7 +14,7 @@
 <body>
 <header>
 <h1 class="title">Pukcab 1.5beta2</h1>
-<h3 class="date">2015-05-24</h3>
+<h3 class="date">2015-05-26</h3>
 </header>
 <nav id="TOC">
 <ul>
@@ -118,7 +118,7 @@
 <p>The requirements for a client are very limited. In short, nearly any Linux/OS X box will do.</p>
 <ul>
 <li>SSH client</li>
-<li>functional <code>tar</code> command (tested with <a href="http://www.gnu.org/software/tar/">GNU tar</a>, should work with <a href="http://www.libarchive.org/">BSD (libarchive) tar</a> and <a href="http://sourceforge.net/projects/s-tar/">Jörg Schilling’s star</a>)</li>
+<li>functional <code>tar</code> command (tested with <a href="http://www.gnu.org/software/tar/">GNU tar</a>, should work with <a href="http://www.libarchive.org/">BSD (libarchive) tar</a> and <a href="http://sourceforge.net/projects/s-tar/">Jörg Schilling’s star</a>). Caution: the <code>tar</code> command of <a href="http://www.busybox.net/">BusyBox</a> is known to have issues that will prevent it from restoring files.</li>
 <li><code>root</code> access (if you want to backup files other than yours)</li>
 </ul>
 <h1 id="installation">Installation</h1>
