--- a/MANUAL.html
+++ b/MANUAL.html
@@ -14,7 +14,7 @@
 <body>
 <header>
 <h1 class="title">Pukcab 1.5beta2</h1>
-<h3 class="date">2015-05-26</h3>
+<h3 class="date">2015-05-27</h3>
 </header>
 <nav id="TOC">
 <ul>
@@ -61,6 +61,7 @@
 <li><a href="#name"><code>name</code></a></li>
 <li><a href="#schedule"><code>schedule</code></a></li>
 <li><a href="#short"><code>short</code></a></li>
+<li><a href="#directory"><code>directory</code></a></li>
 <li><a href="#files">Files</a></li>
 </ul></li>
 <li><a href="#examples-2">Examples</a></li>
@@ -593,7 +594,7 @@ server=&quot;backupserver.localdomain.net&quot;</code></pre>
 <p>The <code>restore</code> command restores <a href="#files">files</a> as they were at a given <a href="#date">date</a>.</p>
 <dl>
 <dt>Syntax</dt>
-<dd><code>pukcab restore</code> [ –<a href="#name">name</a>=<em>name</em> ] [ –<a href="#date">date</a>=<em>date</em> ] [ <a href="#files"><em>FILES</em></a> … ]
+<dd><code>pukcab restore</code> [ –<a href="#directory">directory</a>=<em>directory</em> ] [ –<a href="#name">name</a>=<em>name</em> ] [ –<a href="#date">date</a>=<em>date</em> ] [ <a href="#files"><em>FILES</em></a> … ]
 </dd>
 </dl>
 <h3 id="notes-10">Notes</h3>
@@ -788,6 +789,18 @@ pukcab info --name=test</code></pre>
 </dd>
 <dt>Default value</dt>
 <dd><p><code>false</code></p>
+</dd>
+</dl>
+<h2 id="directory"><code>directory</code></h2>
+<p>Change to a given direcory before restoring entries from the backup.</p>
+<dl>
+<dt>Syntax</dt>
+<dd><p><code>--directory</code>[=]<em>directory</em></p>
+</dd>
+<dd><p><code>-C</code> <em>directory</em></p>
+</dd>
+<dt>Default value</dt>
+<dd><p><em>none</em> (i.e. extract to the current directory)</p>
 </dd>
 </dl>
 <h2 id="files">Files</h2>
