--- a/MANUAL.html
+++ b/MANUAL.html
@@ -792,7 +792,7 @@ pukcab info --name=test</code></pre>
 </dd>
 </dl>
 <h2 id="directory"><code>directory</code></h2>
-<p>Change to a given direcory before restoring entries from the backup.</p>
+<p>Change to a given directory before restoring entries from the backup.</p>
 <dl>
 <dt>Syntax</dt>
 <dd><p><code>--directory</code>[=]<em>directory</em></p>
