--- a/MANUAL.html
+++ b/MANUAL.html
@@ -14,7 +14,7 @@
 <body>
 <header>
 <h1 class="title">Pukcab 1.5</h1>
-<h3 class="date">2015-06-18</h3>
+<h3 class="date">2015-06-20</h3>
 </header>
 <nav id="TOC">
 <ul>
@@ -301,6 +301,12 @@ catalog=&quot;/var/local/backup/catalog.db&quot;</code></pre>
 <td style="text-align: center;">list</td>
 <td style="text-align: center;"><a href="#os-dependent-defaults">OS-dependent</a></td>
 <td style="text-align: left;">what to exclude from the backup</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><code>tar</code></td>
+<td style="text-align: center;">text</td>
+<td style="text-align: center;"><code>&quot;tar&quot;</code></td>
+<td style="text-align: left;">tar command to use to <a href="#restore">restore</a> files</td>
 </tr>
 </tbody>
 </table>
